--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
 
     <script type="application/ld+json">
       {
-        "@context": "http://schema.org",
-        "@type": "Organization",
-        "name": "Açaí da Lili",
-        "url": "http://www.acaidalili.com.br",
-        "sameAs": [ 
-                    "https://www.instagram.com/acaidaliliana",
-                    "https://www.facebook.com/acaidaliliana"
-                  ]
+        "@context" : "http://schema.org",
+        "@type" : "Organization",
+        "name" : "Açaí da Lili",
+        "url" : "http://acaidalili.com.br/",
+        "sameAs" : [ "https://www.instagram.com/acaidaliliana", "https://www.facebook.com/acaidaliliana" ]
       }
     </script>
 
