Instagram Feed Fix

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
 
-    <script src="assets/js/jquery.instagramFeed.min.js"></script>
+    <!-- <script src="assets/js/jquery.instagramFeed.min.js"></script> -->
+    <script src="assets/js/jquery.instagramFeed.js"></script>
     <script>
         (function($){
             $(window).on('load', function(){
