--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Gostaria de fazer um pedido?</h2>
-									<p>Fazemos tele-entrega (Grátis para o bairro Scharlau). Aceitamos cartão de crédito e débito.</p>
+									<p>Fazemos tele-entrega. Aceitamos cartão de crédito e débito.</p>
 								</header>
 								<ul class="features">
 									<li>
